Bug 93994 - [PATCH] role-ducking: Fix improper unducking behavior in case of operating globally
Summary: [PATCH] role-ducking: Fix improper unducking behavior in case of operating gl...
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-04 04:54 UTC by Sangchul Lee
Modified: 2016-02-18 09:40 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch for fixing improper unducking when using this module with global=1 argument (1.74 KB, text/plain)
2016-02-04 04:54 UTC, Sangchul Lee
Details
Patch for fixing improper unducking when using this module with global=1 argument (1.74 KB, patch)
2016-02-04 09:49 UTC, Sangchul Lee
Details | Splinter Review

Description Sangchul Lee 2016-02-04 04:54:59 UTC
Created attachment 121506 [details]
Patch for fixing improper unducking when using this module with global=1 argument

When we use this module with argument "global=1", there exists mis-unducking behavior.

For example,

pactl load-module module-role-ducking trigger_roles=voice,voip ducking_roles=media global=1 volume=70%

Let's assume that voip's device is not same as voice's and media's.

Above 3 roles are playing and if we stop the voip stream then the media's volume would be increased(unducking) even though voice stream is still activated.

The attached patch fixes this issue. Could you please review it?

Thank you.
Comment 1 Sangchul Lee 2016-02-04 09:49:06 UTC
Created attachment 121509 [details] [review]
Patch for fixing improper unducking when using this module with global=1 argument
Comment 2 Arun Raghavan 2016-02-18 09:40:46 UTC
Pushed this now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.